atttempting to make a dropdown list with localized gender options, but running into errors
still need to figure out onGenerateTitle

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,5 +30,18 @@
         "format": "compact"
         }
     }
+    },
+    "genders": "male:female:other",
+    "@genders": {
+        "description": "A list of dropdown gender options"
+    },
+    "pronoun": "{gender, select, male{he} female{she} other{they}}",
+    "@pronoun": {
+    "description": "A gendered message",
+    "placeholders": {
+        "gender": {
+        "type": "String"
+        }
+    }
     }
 }
