--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -5,5 +5,6 @@
     "counterSentence": "Ha hecho clic en el botón",
     "nClicks": "{count, plural, =0{cero veces} =1{a tiempo} other{{count} veces}}",
     "genders": "{gender, select, male{masculino} female{femenino} other{otro}}",
-    "pronoun": "{gender, select, male{él} female{ella} other{ellos}}"
+    "pronoun": "{gender, select, male{él} female{ella} other{ellos}}",
+    "escapedCharacter": "'''{{'¡Hola Mundo!'}}'''"
 }
